client/src/styles/display.css
.display_main{
  width: 65vw;
  min-height: 100vh;
  background-color: var(--primary);
  display: flex;
  justify-content: center;
  align-items: bottom;
  overflow-y: auto;
}

.display_empty, .display_noResults{
  margin-top: 150px;
  height: 400px;
  width: 400px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border: 8px dashed var(--secondary);
  border-radius: 15px;
}

.display_empty > img, .display_noResults > img{
  height: 100px;
  width: auto;
  filter: invert(90%) sepia(13%) saturate(194%) hue-rotate(217deg) brightness(92%) contrast(88%);
}

.display_empty > p{
  padding-top: 50px;
  font-size: 2rem;
  color: var(--blue);
}

.display_allCards{
  margin-top: 90px;
  width: 65vw;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  min-height: 95vh;
  gap: 25px;
}

.display_cardContainer{
  padding: 8px;
  position: relative;
  display: flex;
  flex-direction: column;
  max-height: 500px;
  width: 250px;
  justify-content: space-between;
  align-items: center;
  transition: all .3s ease;
  background-color: white;
  box-shadow: 0px 3px 6px 1px rgba(0,0,0,0.3);
  border: 3px solid transparent;
  border-radius: 3px;
}

.display_cardDrinkImage{
  position: absolute;
  top: 0;
  height: auto;
  width: 244px;
  transition: all .3s ease;
}

.display_bookmark{
  height: 35px;
}

.display_bookmarkBtn{
  opacity: 0;
  position: absolute;
  right: 15px;
  border: none;
  background-color: transparent;
  transition: .3s;
}

.display_bookmarkBtn:hover{
  cursor: pointer;
  filter: invert(27%) sepia(6%) saturate(3691%) hue-rotate(173deg) brightness(102%) contrast(91%); 
}

.display_cardContainer:hover > .display_bookmarkBtn{
  opacity: 1;
  filter: invert(27%) sepia(6%) saturate(3691%) hue-rotate(173deg) brightness(102%) contrast(91%); 
}

.display_filler{
  min-height: 250px;
  width: 250px;
}

.display_drinkName{
  font-size: 1.8rem;
  color: var(--blue);
}

.display_cardQuote{
  font-size: 1.4rem;
  padding-bottom: 3px;
}

.display_cardContainer:hover .display_cardDrinkImage{
  cursor: pointer;
  opacity: 0.5;
}

.display_empty.dark{
  border: 8px dashed var(--blue);
}

.display_empty.dark > img{
  filter: invert(27%) sepia(6%) saturate(3691%) hue-rotate(173deg) brightness(102%) contrast(91%);
}

.display_cardContainer.selected{
  border: 3px solid var(--blue)
}

@media screen and (max-width: 768px){
  .display_main{
    width: 100vw;
    max-height: 100vh;
  }

  .display_allCards{
    margin-top: 100px;
    max-width: 100vw;
    min-height: 100vh;
  }

  .display_empty, .display_noResults{
    height: 200px;
    width: 200px;
  }

  .display_empty > p{
    font-size: 1.2rem;
    text-align: center;
    padding: 5px;
  }

  .display_cardContainer{
    padding: 8px;
    height: 325px;
    width: 225px;
  }

  .display_cardDrinkImage{
    width: 220px;
    transition: all .3s ease;
  }

  .display_empty > img, .display_noResults > img{
    height: 50px;
  }

  .display_drinkName{
    text-align: center;
  }

  .display_cardQuote{
    display: none;
  }
}

